tests/neg/_TypeInterweaving/unmatched3.scala


def f3(x: Any[)T] = ??? // error
